--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -8,47 +8,90 @@
 
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
         <h6 class="text-uppercase fw-bold">Empresa</h6>
-        <p><a href="#" class="text-white text-decoration-none">Sobre nós</a></p>
-        <p><a href="#" class="text-white text-decoration-none">Carreiras</a></p>
-        <p><a href="#" class="text-white text-decoration-none">Imprensa</a></p>
+        <p>
+          <a
+            href="{{ url_for('auth.about') }}"
+            class="text-white text-decoration-none"
+            >Sobre nós</a
+          >
+        </p>
+        <p>
+          <a
+            href="{{ url_for('auth.careers') }}"
+            class="text-white text-decoration-none"
+            >Carreiras</a
+          >
+        </p>
+        <p>
+          <a
+            href="{{ url_for('auth.press') }}"
+            class="text-white text-decoration-none"
+            >Imprensa</a
+          >
+        </p>
       </div>
 
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
         <h6 class="text-uppercase fw-bold">Suporte</h6>
         <p>
-          <a href="#" class="text-white text-decoration-none"
+          <a
+            href="{{ url_for('auth.help_center') }}"
+            class="text-white text-decoration-none"
             >Central de ajuda</a
           >
         </p>
-        <p><a href="#" class="text-white text-decoration-none">Contato</a></p>
         <p>
-          <a href="#" class="text-white text-decoration-none">Termos de uso</a>
+          <a
+            href="{{ url_for('auth.contact') }}"
+            class="text-white text-decoration-none"
+            >Contato</a
+          >
+        </p>
+        <p>
+          <a
+            href="{{ url_for('auth.terms') }}"
+            class="text-white text-decoration-none"
+            >Termos de uso</a
+          >
         </p>
       </div>
 
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
         <h6 class="text-uppercase fw-bold">Siga-nos</h6>
         <p>
-          <a href="https://facebook.com" class="text-white text-decoration-none"
-            ><i class="fab fa-facebook-f"></i> Facebook</a
+          <a
+            href="https://facebook.com"
+            target="_blank"
+            class="text-white text-decoration-none"
           >
+            <i class="fab fa-facebook-f me-2"></i> Facebook
+          </a>
         </p>
         <p>
-          <a href="https://twitter.com" class="text-white text-decoration-none"
-            ><i class="fab fa-twitter"></i> Twitter</a
+          <a
+            href="https://twitter.com"
+            target="_blank"
+            class="text-white text-decoration-none"
           >
+            <i class="fab fa-twitter me-2"></i> Twitter
+          </a>
         </p>
         <p>
           <a
             href="https://instagram.com"
+            target="_blank"
             class="text-white text-decoration-none"
-            ><i class="fab fa-instagram"></i> Instagram</a
           >
+            <i class="fab fa-instagram me-2"></i> Instagram
+          </a>
         </p>
       </div>
     </div>
 
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    <div
+      class="text-center p-3 border-top border-secondary mt-3"
+      style="background-color: rgba(0, 0, 0, 0.2)"
+    >
       © {{ now().year }} YummyGo. Todos os direitos reservados.
     </div>
   </div>
